# cuhkit

./: .gitignore  README.md  build.bat  build_pip.bat  build_pyinstaller.bat  publish.bat  requirements.txt  setup.cfg
imgs/: icon-48x48.pdn
src/: .cuhkitproj.json
src/cuhkit/: __init__.py  __main__.py  cli.py  cli_context.py  credentials.py  exceptions.py  log.py
src/cuhkit/libs/: __init__.py  addon_builder.py  api.py  git_imports.py  mod_builder.py  requests.py  templates.py  timeit.py
src/cuhkit/projects/: __init__.py  addon_project.py  mod_project.py  project.py
src/cuhkit/projects/addon_template/: README.md
src/cuhkit/projects/addon_template/src/: .build.json  main.lua
src/cuhkit/projects/addon_template/src/libs/: MyLib.lua
src/cuhkit/projects/addon_template/src/services/: MyService.lua
src/cuhkit/projects/mod_template/: .gitignore  README.md
src/cuhkit/projects/mod_template/src/data/tiles/: .delete_me
src/cuhkit/projects/templates/addon_template/: README.md
src/cuhkit/projects/templates/addon_template/src/: .build.json
src/cuhkit/projects/templates/mod_template/: README.md
src/cuhkit/projects/templates/mod_template/src/: mod.xml
src/cuhkit/projects/templates/mod_template/sw_mod_sdk/: component_mod_compiler.com  mesh_compiler.com  texture_compiler.com
