[metadata]
name = cuhkit
version = file: VERSION
author = Cuh4
description = A CLI-oriented Python package for handling cuhHub Stormworks projects (addons/mods).
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/cuhHub/cuhkit

project_urls = 
    Source = https://github.com/cuhHub/cuhkit

[options]
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.13
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    cuhkit = cuhkit.cli:cli

[options.package_data]
* = projects/templates/**